Refresh tokens and get logged in user, middleware
