# apps/auth-service/src/routes/auth.router.ts
@@ -1,11 +1,14 @@
 import express, { Router } from "express";
-import { loginUser, resetUserPassword, userForgotPassword, userRegistration, verifyForgotPassword, verifyUser } from "../controller/auth.controller";
+import { getUser, loginUser, refreshToken, resetUserPassword, userForgotPassword, userRegistration, verifyForgotPassword, verifyUser } from "../controller/auth.controller";
+import isAuthenticated from "@packages/middleware/isAuthenticated";
 
 const router: Router = express.Router();
 
 router.post("/user-registration", userRegistration);
 router.post("/verify-user", verifyUser);
 router.post("/login-user", loginUser);
+router.post("/refresh-token-user", refreshToken);
+router.get("/logged-in-user", isAuthenticated, getUser);
 router.post("/forgot-password-user", userForgotPassword);
 router.post("/verify-forgot-password-user", verifyForgotPassword);
 router.post("/reset-password-user", resetUserPassword);
